# advent_of_code

2022/day1/src/: main.rs
2022/day2/pt1/src/: main.rs
2022/day2/pt2/src/: main.rs
2023/cpp/: CMakeLists.txt
2023/cpp/src/: CMakeLists.txt  main.cpp
2023/rust/: Cargo.toml
2023/rust/src/: day1.rs  main.rs
